2 users methods controllers
